# tree-sitter-htmlx

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  tree-sitter.json
crates/tree-sitter-css-svelte/: Cargo.toml  build.rs  grammar.js  tree-sitter.json
crates/tree-sitter-css-svelte/examples/: profile_parse.rs
crates/tree-sitter-css-svelte/src/: grammar.json  lib.rs  node-types.json  parser.c  scanner.c
crates/tree-sitter-css-svelte/tests/: spec_features.rs
crates/tree-sitter-html/: Cargo.toml  build.rs  grammar.js  tree-sitter.json
crates/tree-sitter-html/queries/: highlights.scm  injections.scm
crates/tree-sitter-html/src/: grammar.json  lib.rs  node-types.json  parser.c  scanner.c  tag.h
crates/tree-sitter-html/test/corpus/: main.txt
crates/tree-sitter-htmlx/: Cargo.toml  build.rs  grammar.js  tree-sitter.json
crates/tree-sitter-htmlx/queries/: folds.scm  highlights.scm  indents.scm  injections.scm
crates/tree-sitter-htmlx/queries/html/: folds.scm  highlights.scm  indents.scm  injections.scm
crates/tree-sitter-htmlx/src/: grammar.json  lib.rs  node-types.json  parser.c  scanner.c
crates/tree-sitter-htmlx/src/html/: scanner.c  tag.h
crates/tree-sitter-htmlx/test/highlight/: directives.htmlx  elements.htmlx  expressions.htmlx
crates/tree-sitter-htmlx/tests/: attributes.rs  crash_repro.rs  elements.rs  expressions.rs  highlight.rs
crates/tree-sitter-htmlx/tests/utils/: mod.rs
crates/tree-sitter-svelte/: Cargo.toml  build.rs  grammar.js  tree-sitter.json
crates/tree-sitter-svelte/examples/: profile_parse.rs
crates/tree-sitter-svelte/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
crates/tree-sitter-svelte/queries/htmlx/: highlights.scm  indents.scm  injections.scm  locals.scm
crates/tree-sitter-svelte/queries/htmlx/html/: highlights.scm  injections.scm  locals.scm
crates/tree-sitter-svelte/scripts/: sync-svelte-vscode-grammar-fixtures.sh
crates/tree-sitter-svelte/src/: grammar.json  lib.rs  node-types.json  parser.c  scanner.c
crates/tree-sitter-svelte/src/htmlx/: scanner.c
crates/tree-sitter-svelte/src/htmlx/html/: scanner.c  tag.h
crates/tree-sitter-svelte/tests/: await_blocks.rs  comments.rs  components.rs  const_tags.rs  crash_repro.rs  debug_tags.rs  declaration_tags.rs  each_blocks.rs  editor_queries.rs  elements.rs  expressions.rs  fixtures_test.rs  html_tags.rs  if_blocks.rs  key_blocks.rs  recovery.rs  render_tags.rs  runes.rs  script_elements.rs  snippet_blocks.rs  style_elements.rs  svelte_elements.rs  svelte_vscode_grammar_fixtures.rs  vendor_sync.rs
crates/tree-sitter-svelte/tests/fixtures/blocks/: await-full.svelte  each-destructure.svelte  each-simple.svelte  each-with-index-key.svelte  if-else.svelte  key-block.svelte
crates/tree-sitter-svelte/tests/fixtures/directives/: event-bubble-element.svelte
crates/tree-sitter-svelte/tests/fixtures/runes/: runes-full.svelte  snippet-render.svelte
crates/tree-sitter-svelte/tests/fixtures/svelte-vscode-grammar/: UPSTREAM.md
crates/tree-sitter-svelte/tests/fixtures/tags/: const-tag.svelte  debug-tag.svelte  html-tag.svelte
crates/tree-sitter-svelte/tests/utils/: mod.rs
docs/: grammar-architecture-plan.md
resources/: CSS_RESOURCE_CHECKLIST.md  CSS_SPECS.md  SVELTE_GRAMMAR_AUDIT.md  css-cascade-6.html  css-contain-3.html  css-nesting-1.html  css-syntax-3.html  css-values-4.html  mediaqueries-5.html  selectors-4.html
src/: grammar.json  node-types.json  parser.c
