[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-html = { path = "crates/tree-sitter-html" }
tree-sitter-htmlx = { path = "crates/tree-sitter-htmlx" }
cc = "1.2"
