[package]
name = "tree-sitter-html"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter grammar for HTML following the WHATWG HTML Living Standard"
repository = "https://github.com/user/tree-sitter-htmlx"
keywords = ["tree-sitter", "parser", "html", "whatwg"]
categories = ["parsing", "text-editors"]
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }
