[package]
name = "tree-sitter-htmlx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter grammar for HTMLX (expression-enhanced HTML)"
repository = "https://github.com/themixednuts/tree-sitter-htmlx"
keywords = ["tree-sitter", "parser", "html", "htmlx", "svelte"]
categories = ["parsing", "text-editors"]
build = "build.rs"
include = [
  "src/**",
  "queries/**",
  "test/**",
  "tests/**",
  "grammar.js",
  "tree-sitter.json",
  "build.rs",
  "Cargo.toml",
  "README*",
  "LICENSE*",
]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }
