[package]
name = "tree-sitter-htmlx-svelte"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter grammar for Svelte 5"
repository = "https://github.com/themixednuts/tree-sitter-htmlx"
build = "build.rs"
include = [
  "src/**",
  "examples/**",
  "queries/**",
  "grammar.js",
  "tree-sitter.json",
  "build.rs",
  "Cargo.toml",
  "README*",
  "LICENSE*",
]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
rstest = "0.23"
